--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     //OUTROS
     implementation 'com.heinrichreimersoftware:material-intro:1.6'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
