--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dex.car_compras">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -9,8 +13,13 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.AddListActivity" android:theme="@style/anotherTheme"/>
-        <activity android:name=".activity.CreateListActivity" android:theme="@style/anotherTheme"/>
+        <activity android:name=".activity.ScanActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.AddListActivity"
+            android:theme="@style/anotherTheme" />
+        <activity
+            android:name=".activity.CreateListActivity"
+            android:theme="@style/anotherTheme" />
         <activity
             android:name=".activity.HomeActivity"
             android:label="@string/title_activity_home"
