--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'com.heinrichreimersoftware:material-intro:1.6'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.0.2'
