--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.ScanActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".activity.Splash" android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.AddListActivity"
             android:theme="@style/anotherTheme" />
